Fix EO Space on tablet

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/offers.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/offers.less
@@ -325,6 +325,12 @@
       font-size: 20px;
     }
 
+    .cruise-2018-offers-gap {
+      content: ' ';
+      height: 35px;
+      min-height: 35px;
+    }
+
     .cruise-2018-offer-description {
       text-align: center;
       font-size: 18px;
